tests/golden/type_errors/named_payload_unknown_field.cd
enum Result { Ok(value: number), Empty }
let result = Result.Ok(1);
let label = match result {
  Result.Ok(missing: value) => value,
  Result.Empty => 0,
};
