tests/golden/type_errors/named_payload_unknown_field.err
Type error at 4:13: variant Result.Ok has no payload field missing
    Result.Ok(missing: value) => value,
              ^
